add all endpoints
