# internal/interfaces/http/favorite/controller.go
@@ -1,30 +1,33 @@
 package http_interfaces_favorite
 
 import (
-	"github.com/vinihss/aiqfome/internal/usecases/favorite"
+	"context"
+
+	domain "github.com/vinihss/aiqfome/internal/domain/favorite"
+	usecase "github.com/vinihss/aiqfome/internal/usecases/favorite"
 )
 
 type FavoriteController struct {
-	createUC *favorite.CreateFavoriteUseCase
+	addUC    *usecase.AddFavoriteUseCase
+	listUC   *usecase.ListFavoritesUseCase
+	removeUC *usecase.RemoveFavoriteUseCase
 }
 
-func NewFavoriteController(createUC *favorite.CreateFavoriteUseCase) *FavoriteController {
-	return &FavoriteController{createUC: createUC}
+func NewFavoriteController(
+	add *usecase.AddFavoriteUseCase,
+	list *usecase.ListFavoritesUseCase,
+	remove *usecase.RemoveFavoriteUseCase) *FavoriteController {
+	return &FavoriteController{addUC: add, listUC: list, removeUC: remove}
 }
 
-func (ctrl *FavoriteController) CreateFavorite(req CreateFavoriteRequest) (FavoriteResponse, error) {
-	fav, err := ctrl.createUC.Execute(favorite.CreateFavoriteInput{
-		CustomerID: req.CustomerID,
-		ProductID:  req.ProductID,
-	})
-	if err != nil {
-		return FavoriteResponse{}, err
-	}
+func (c *FavoriteController) Add(ctx context.Context, customerID, productID uint) (domain.Favorite, error) {
+	return c.addUC.Execute(ctx, customerID, productID)
+}
 
-	return FavoriteResponse{
-		ID:         fav.ID,
-		CustomerID: fav.CustomerID,
-		ProductID:  fav.ProductID,
-		Product:    fav.Product,
-	}, nil
+func (c *FavoriteController) List(ctx context.Context, customerID uint) ([]domain.Favorite, error) {
+	return c.listUC.Execute(ctx, customerID)
+}
+
+func (c *FavoriteController) Remove(ctx context.Context, customerID, productID uint) error {
+	return c.removeUC.Execute(ctx, customerID, productID)
 }
