# internal/interfaces/http/favorite/request.go
@@ -1,6 +1,5 @@
 package http_interfaces_favorite
 
-type CreateFavoriteRequest struct {
-	CustomerID string `json:"customer_id" binding:"required"`
-	ProductID  string `json:"product_id" binding:"required"`
+type AddFavoriteRequest struct {
+	ProductID uint `json:"product_id" binding:"required,gt=0"`
 }
