# internal/interfaces/http/favorite/response.go
@@ -1,8 +1,17 @@
 package http_interfaces_favorite
 
 type FavoriteResponse struct {
-	ID         string `json:"id"`
-	CustomerID string `json:"customer_id"`
-	ProductID  string `json:"product_id"`
+	ID         uint   `json:"id"`
+	CustomerID uint   `json:"customer_id"`
+	ProductID  uint   `json:"product_id"`
 	Product    string `json:"product"`
+}
+
+func ToFavoriteResponse(id, customerID, productID uint, product string) FavoriteResponse {
+	return FavoriteResponse{
+		ID:         id,
+		CustomerID: customerID,
+		ProductID:  productID,
+		Product:    product,
+	}
 }
